# woltui

./: Cargo.toml
src/: app.rs  main.rs
src/app/: config.rs  statefullist.rs  states.rs
