[package]
name = "woltui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.6"
wol-rs = "1.0.1"
crossterm = "0.26"
ratatui = "0.20.1"
tui-textarea = { git = "https://github.com/rhysd/tui-textarea.git", default-features = false, features = [
  "ratatui-crossterm",
] }
sm = "0.9"
sm_macro = "0.9"
regex = "1.9.5"
